added background image

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </nav>
     </header>
 
-    <section id="hero">
+    <section class="hero">
         <p>Edit This Later</p>
     </section>
 
