--- a/index.html
+++ b/index.html
@@ -12,17 +12,21 @@
 
 <body>
     <header>
-        <div>
-            <h1>Justice Page</h1>
+        <div class="container">
+            <div class="box-1">
+                <h1>Justice Page</h1>
+            </div>
+            <div class="box-2" class="header-links">
+                <nav>
+                    <ul>
+                    <li><a href="#about-section">About Me</a></li>
+                    <li><a href="#work-section">Work</a></li>
+                    <li><a href="#contact-section">Contact Me</a></li>
+                    <li><a href="#resume-section">Resume</a></li>
+                    </ul>
+                </nav>
+             </div>
         </div>
-        <nav>
-            <ul>
-                <li><a href="#about-section">About Me</a></li>
-                <li><a href="#work-section">Work</a></li>
-                <li><a href="#contact-section">Contact Me</a></li>
-                <li><a href="#resume-section">Resume</a></li>
-            </ul>
-        </nav>
     </header>
 
 <!--Hero-->
@@ -45,9 +49,8 @@
         <div class="bio">
             <p>
                 Hi! My name is Justice Page and I am currently enrolled in MSU's Fullstack Coding Bootcamp! As technology has started to be heavily intergrated in almost everyone's day to day lives, I decided it was time to take the next steps and dive deep into the development side so that I can better understand all the tech around me. I've always had an interst in the development and functionality of websites and applications and can't wait to be able to put my own spin on them in the future!
-            </p>
-
-            <p>
+            <br>
+            <br>
                 Web development is only a small part of my ever-growing professional background. I have worked in sales for the past five years and currently manage over 750 accounts doing hundreds of thousands in revenue each year. Due to my success in my current position, I was recently recognized by my company for National Womens Month.
                 Other interests of mine inculde ceramics, photography, anime, and video games. I also love traveling and hope to secure a career where I am able to work remotely so I am free to experience more of the world. In my free time, I like spending time with my partner, friends, family, and of course my pets! I have two dogs and two cats-it's like a small petting zoo around here!
             </p>
@@ -63,7 +66,7 @@
         <div class="projects">
             <div class="project-container">
                     <a href="https://jpage96.github.io/run-buddy" class="run-buddy">
-                        <div class="tag1">
+                        <div>
                             <img src="./assets/images/run-buddy.png" alt="snapshot of run-buddy page">
                         </div>
                         <div class="inner-container">
@@ -74,8 +77,8 @@
                     </a>
                     
                     <a href="https://jpage96.github.io/my_fav_things/" class="fav-things">
-                        <div class="tag1">
-                            <img src="" alt="snapshot of my favorite things">
+                        <div>
+                            <img src="" alt="">
                         </div>
                         <div class="inner-container">
                             <h3>My Favorite Things</h3>
@@ -85,7 +88,7 @@
                     </a>
                     
                     <a href="" class="TBD">
-                        <div class="tag1">
+                        <div>
                             <img src="" alt="">
                         </div>
                         <div class="inner-container">
@@ -110,7 +113,7 @@
 
                     <a href="" class="TBD">
                         <div class="tag1">
-                            <img src="" alt="tbd">
+                            <img src="" alt="">
                         </div>
                         <div class="inner-container">
                             <h3>TBD</h3>
