added additional image and project tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css" width:120%>
     <title>Justice Page's Portfolio</title>
 </head>
 
@@ -32,11 +32,11 @@
 <!--Hero-->
 
     <section class="hero">
-        <div>
-            <h2>Welcome To My Page!</h2>
+        <div class="hero-box">
+            <h2>Cool Text Here!</h2>
         </div>
         <!--Add picture of yourself-->
-        <img src="./assets/images/header.jpeg" alt="floral background">
+        <img class="heroimg" src="./assets/images/header.jpeg" alt="floral background">
     </section>
 
 <!--About Me-->
@@ -78,7 +78,7 @@
                     
                     <a href="https://jpage96.github.io/my_fav_things/" class="fav-things">
                         <div>
-                            <img src="" alt="">
+                            <img src="./assets/images/rose.jpeg" alt="picture of a rose">
                         </div>
                         <div class="inner-container">
                             <h3>My Favorite Things</h3>
