--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
 
     <section class="hero">
         <div class="hero-box">
-            <h2>Cool Text Here!</h2>
+            <h2>Welcome!</h2>
         </div>
-        <!--Add picture of yourself-->
         <img class="heroimg" src="./assets/images/header.jpeg" alt="floral background">
     </section>
 
@@ -92,8 +91,8 @@
                             <img src="" alt="">
                         </div>
                         <div class="inner-container">
-                            <h3>TBD</h3>
-                            <p>TBD</p>
+                            <h3>LED Wall</h3>
+                            <p>Node/IoT</p>
                         </div>
                         <div class="boxes"></div>
 
@@ -116,8 +115,8 @@
                             <img src="" alt="">
                         </div>
                         <div class="inner-container">
-                            <h3>TBD</h3>
-                            <p>TBD</p>
+                            <h3>Pastel Puzzles</h3>
+                            <p>Mern Stack</p>
                         </div>
                         <div class="boxes"></div>
 
