added final css touches

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     
                     <a href="" class="TBD">
                         <div>
-                            <img src="" alt="">
+                            <img src="./assets/images/LED.jpeg" alt="LED wall">
                         </div>
                         <div class="inner-container">
                             <h3>LED Wall</h3>
@@ -112,7 +112,7 @@
 
                     <a href="" class="TBD">
                         <div class="tag1">
-                            <img src="" alt="">
+                            <img src="./assets/images/puzzle.jpeg" alt="Pastel Puzzle">
                         </div>
                         <div class="inner-container">
                             <h3>Pastel Puzzles</h3>
@@ -127,7 +127,7 @@
 
 <!--Footer-->
 
-    <footer class="contact-section">
+    <footer class="contact-section" id="contact-section">
             <div class="section-title">
                 <h2>Contact Me</h2>
             </div>
