added first project

--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
                         <div class="boxes"></div>
                     </a>
                     
-                    <a href="https://jpage96.github.io/my_fav_things/" class="fav-things">
+                    <a href="https://fpierrerun.github.io/BeerMe/" class="beer-me">
                         <div>
-                            <img src="./assets/images/rose.jpeg" alt="picture of a rose">
+                            <img src="./assets/images/beerme.jpg" alt="picture of a rose">
                         </div>
                         <div class="inner-container">
-                            <h3>My Favorite Things</h3>
-                            <p>My Favorite Things</p>
+                            <h3>Beer Me</h3>
+                            <p>Java Script/ Server Side API</p>
                         </div>
                         <div class="boxes"></div>
                     </a>
