--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
 
                     </a>
 
-                    <a href="" class="TBD">
+                    <a href="https://tipsytech2.herokuapp.com/" class="tipsyTech">
                         <div class="tag1">
-                            <img src="./assets/images/puzzle.jpeg" alt="Pastel Puzzle">
+                            <img src="./assets/images/tipsyTech.png" alt="Tipsy Tech">
                         </div>
                         <div class="inner-container">
-                            <h3>Pastel Puzzles</h3>
-                            <p>Mern Stack</p>
+                            <h3>Tipsy Tech</h3>
+                            <p>Node</p>
                         </div>
                         <div class="boxes"></div>
 
