--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
                     </a>
 
-                    <a href="https://tipsytech2.herokuapp.com/" class="tipsyTech">
+                    <a href="https://tipsytech.herokuapp.com/" class="tipsyTech">
                         <div class="tag1">
                             <img src="./assets/images/tipsyTech.png" alt="Tipsy Tech">
                         </div>
