--- a/index.html
+++ b/index.html
@@ -120,6 +120,16 @@
                         </div>
                         <div class="boxes"></div>
 
+                        <a href="https://whispering-crag-28124.herokuapp.com/" class="tipsyTech">
+                            <div class="tag1">
+                                <img src="./assets/images/ComEvent.png" alt="Community Events">
+                            </div>
+                            <div class="inner-container">
+                                <h3>Community Events</h3>
+                                <p>Mern</p>
+                            </div>
+                            <div class="boxes"></div>
+
                     </a>
                 </div> 
             </div>
